# adas_minor_project

./: .gitignore  intent_model.pt
dataset/: adas_features.csv
src/adas_project/: CMakeLists.txt  README.md  package.xml  run_platform.py
src/adas_project/config/: controllers.yaml
src/adas_project/drivers/: driver_models.py
src/adas_project/fixed_adas/: fixed_system.py
src/adas_project/launch/: aggressive_sim.launch.py  sim.launch.py  viz.launch.py
src/adas_project/ml/: train_intent.py
src/adas_project/ml_adas/: ml_system.py
src/adas_project/models/: intent_brake_rf.pkl  intent_lane_change_rf.pkl  intent_offroad_rf.pkl  intent_overtake_rf.pkl
src/adas_project/results/: live_stats.json  metrics.csv
src/adas_project/rviz/: lidar_view.rviz
src/adas_project/scripts/: auto_fixed.sh  auto_ml.sh  behavior_generator.py  collect_data.sh  control_arbitration_node.py  dashboard.py  dataset_exporter.py  dataset_orchestrator.py  evaluator.py  fixed_adas.py  follow_cam.py  fullclean.sh  generate_graphs.py  inference_node.py  manual_driver.py  manual_fixed.sh  manual_ml.sh  ml_adas.py  monitor.sh  run_dataset_gen.py  run_validation.py  scenario_controller.py  supervisor.py  traffic_behavior_node.py  train.sh  train_intent.py  train_model.py  validation_orchestrator.py
src/adas_project/scripts/dataset/: adas_features.csv
src/adas_project/simulation/: fast_sim.py  generate_dataset.py  validate_sim.py
src/adas_project/urdf/: vehicle.xacro
src/adas_project/worlds/: two_lane.world
